<resources>
    <string name="app_name">Online Medicine Service</string>
    <string name="customerloginpageheader">Online Medicine Service</string>
    <string name="createac">No account yet? <u>Click here</u> to create one</string>
    <string name="login">Login To Your Account</string>
    <string name="signup">Signup For Free!</string>
    <string name="gotophermacy">Administrator</string>
    <string name="gotocustomer">Customer</string>
    <string name="choosetetx">Procceed for :</string>
    <string name="queryHint">Search for medicines</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">LogOut</string>

    <string name="home_second">Home Second</string>
    <string name="popularCatagory">Popular Catagories</string>
    <string name="addToCartString">Add To Cart</string>
    <string name="whatsThePriceText">Price :</string>
    <string name="whatsTheStrengthText">Strength :</string>
    <string name="whatsTheChemicalText">Chemical Formula :</string>
    <string name="whatsTheDosageText">Dosage Form :</string>
    <string name="whatsTheCompanyText">Menufacturer :</string>
    <string name="cart">Cart</string>
    <string name="your_details">Your Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="death_of_birth">Death of Birth</string>
    <string name="editProfile">Edit</string>
    <string name="commitChanges">Commit Changes</string>
    <string name="deleteProfileText">DELETE PROFILE</string>
    <string name="changePassword"><u>Change Password</u></string>
    <string name="addButtonText">+</string>
    <string name="removeButtonText">-</string>
    <string name="notAvailable">Not Available</string>
    <string name="inStock">In Stock</string>
    <string name="product_desc">Product Description:</string>
    <string name="confirm_order">Proceed To Order</string>
    <string name="resetPassword">Reset Password</string>
    <string name="createNewAccount">CREATE NEW ACCOUNT</string>
    <string name="ConfirmOrderInfo">Confirm Order Info</string>
    <string name="YourProduct">Your Products : </string>
    <string name="ContactInfo">"Contact Information : "</string>
    <string name="YourPhoneNumber"> "Phone Number :"  </string>
    <string name="Address">"Address : "</string>
    <string name="PaymentMethod"> "Payment Method : "</string>
    <string name="Bkash">Bkash Payment</string>
    <string name="CashOnDelivery">Cash On Delivery</string>
    <string name="TransactionID">Transaction ID</string>
    <string name="transactionNumber">Transaction Number</string>
    <string name="transactionnumber">"Your Bkash Number "</string>
    <string name="order_history">History</string>
</resources>
