<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileinfoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="135dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="268dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/your_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4757AE"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#4757AE"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#4757AE"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#4757AE"
        android:textSize="22sp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#4757AE"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/editProfile"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#4757AE"
        android:padding="10dp"
        android:text="@string/deleteProfileText"
        android:textColor="#EFE9E9"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>




