<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CustomerAuthentication.SignInActivity">

    <EditText
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#2C2929"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="#16192E"
        android:textColorHint="#4757AE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/passwordText"
        style="@android:style/Widget.Holo.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#2C2929"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#16192E"
        android:textColorHint="#4757AE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4757AE"
        android:textColorHighlight="#00B8D4"
        android:textColorHint="#00B8D4"
        android:textColorLink="#00B8D4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="#4757AE"
        android:elevation="10dp"
        android:text="LOGIN"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:elevation="15dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#4757AE"
        android:textColorHighlight="#00B8D4"
        android:textColorHint="#00B8D4"
        android:textColorLink="#00B8D4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/resetPasswordButtonID"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:text="@string/resetPassword"
        android:textColor="#4757AE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/createAccountButtonID"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/createNewAccount"
        android:textColor="#4757AE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordButtonID" />
</androidx.constraintlayout.widget.ConstraintLayout>