<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/productNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="#4757AE"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productAvailabilityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textColor="#4757AE"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#FFFFFF"
                android:elevation="40dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF">

                    <TextView
                        android:id="@+id/whatsthecompanyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/whatsTheCompanyText"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/companyNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/whatsthecompanyText"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/whatsTheDosagetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/whatsTheDosageText"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/whatsthecompanyText" />

                    <TextView
                        android:id="@+id/dosageFormText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/whatsTheDosagetext"
                        app:layout_constraintTop_toBottomOf="@+id/companyNameText" />

                    <TextView
                        android:id="@+id/whatsTheChemicalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/whatsTheChemicalText"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/whatsTheDosagetext" />

                    <TextView
                        android:id="@+id/chemicalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/whatsTheChemicalText"
                        app:layout_constraintTop_toBottomOf="@+id/dosageFormText" />

                    <TextView
                        android:id="@+id/whatsTheStrengthText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/whatsTheStrengthText"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/whatsTheChemicalText" />

                    <TextView
                        android:id="@+id/strengthText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/whatsTheStrengthText"
                        app:layout_constraintTop_toBottomOf="@+id/chemicalText" />

                    <TextView
                        android:id="@+id/whatsThePriceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/whatsThePriceText"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/whatsTheStrengthText"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/priceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="end"
                        android:textColor="#4757AE"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/whatsThePriceText"
                        app:layout_constraintTop_toBottomOf="@+id/strengthText"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minusButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center|end"
                    android:background="@drawable/ic_remove_circle_black_24dp" />

                <TextView
                    android:id="@+id/showQuantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="#4757AE"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/plusButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center|start"
                    android:background="@drawable/ic_add_circle_black_24dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/total_price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="#4757AE"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showQuantityText" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="200dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#4757AE"
                android:elevation="20dp"
                android:text="@string/addToCartString"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="637dp" />


        </LinearLayout>
    </ScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>